--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "react-scrollbar": "^0.5.6",
     "react-test-renderer": "^16.9.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "node": "^14.16.1",
+    "npm": "6.14.12"
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
