--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8000/",
+  "engines": {
+    "node": "^14.16.1"
+  },
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "bootstrap": "^4.3.1",
@@ -18,9 +21,7 @@
     "react-scrollbar": "^0.5.6",
     "react-test-renderer": "^16.9.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "node": "^14.16.1",
-    "npm": "6.14.12"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
